<resources>
    <string name="app_name">practica</string>
    <string name="titulo">Suma de dos numeros</string>
    <string name="lbln1">Ingresa el primer numero</string>
    <string name="lbln2">Ingresa el segundo numero</string>
    <string name="hitn1">Aqui el primer numero</string>
    <string name="hitn2">Aqui en segundo numero</string>
    <string name="btnsuma">Calcular resultado</string>

</resources>